--- a/polls/templates/didi.html
+++ b/polls/templates/didi.html
@@ -6,8 +6,15 @@
 <script src="/static/js/jquery-3.3.1.js"></script>
 <link href="/static/bootstrap-4.0.0-dist/css/bootstrap.min.css" rel="stylesheet">
 <script src="/static/bootstrap-4.0.0-dist/js/bootstrap.min.js"></script>
+<script src="https://cdn.bootcss.com/popper.js/1.12.5/umd/popper.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="refresh" content="20">
+<style>
+  /* Make the image fully responsive */
+  .carousel-inner img {
+      width: 100%;
+      height: 100%;
+  }
+</style>
 <script>
 $(document).ready(function(){
 
@@ -80,7 +87,46 @@ $(document).ready(function(){
 
 <body>
 
+
+
+
 <div class="container">
+
+
+<div id="demo" class="carousel slide" data-ride="carousel" >
+ 
+  <!-- 指示符 -->
+  <ul class="carousel-indicators">
+    <li data-target="#demo" data-slide-to="0" class="active"></li>
+    <li data-target="#demo" data-slide-to="1"></li>
+    <li data-target="#demo" data-slide-to="2"></li>
+  </ul>
+ 
+  <!-- 轮播图片 -->
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="/media/photos/1.jpg">
+    </div>
+    <div class="carousel-item">
+      <img src="/media/photos/2.jpg">
+    </div>
+    <div class="carousel-item">
+      <img src="/media/photos/3.jpg">
+    </div>
+  </div>
+ 
+  <!-- 左右切换按钮 -->
+  <a class="carousel-control-prev" href="#demo" data-slide="prev">
+    <span class="carousel-control-prev-icon"></span>
+  </a>
+  <a class="carousel-control-next" href="#demo" data-slide="next">
+    <span class="carousel-control-next-icon"></span>
+  </a>
+ 
+</div>
+
+
+
 <form action="/polls/didi" method="post">
 {% csrf_token %}
 <table class="table table-hover table-responsive">
@@ -93,12 +139,12 @@ $(document).ready(function(){
 <tbody>
 	{% for driver in Drivers %}
   	<tr>
-    	<td style="width:130px;height:auto;">
-    	<img src="/media/{{driver.img}}" class="rounded-circle img-fluid"  style="width:50px;height:50px;"> <a href="/polls/driver/{{driver.id}}">{{driver.driver_name}}</a>
+    	<td style="width:auto;height:auto;">
+    	<img src="/media/{{driver.img}}" class="rounded-circle img-fluid responsive"  style="width:50px;height:50px;"> <a href="/polls/driver/{{driver.id}}">{{driver.driver_name}}</a>
     	</td>
 		
-    	<td>
-			<div class="container" text-align="left-side">
+    	<td >
+			<div class="container" text-align="left-side ">
 			{% for cm in driver.comment_set.all %}
 				<button type="button" class="btn btn-primary" style="float:left;margin-left:5px;margin-bottom:4px;"  onclick="updatecomment({{cm.id}})">
 					{{cm.comment_text}} <span class="badge badge-light">{{cm.comment_num}}</span>
