--- a/polls/templates/didi.html
+++ b/polls/templates/didi.html
@@ -82,17 +82,10 @@ $(document).ready(function(){
 		});
 	}
 </script>
-
 </head>
 
 <body>
-
-
-
-
 <div class="container">
-
-
 <div id="demo" class="carousel slide" data-ride="carousel" >
  
   <!-- 指示符 -->
@@ -106,12 +99,21 @@ $(document).ready(function(){
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img src="/media/photos/1.jpg">
+	  <div class="carousel-caption">
+        <h3>不忘初心</h3>
+      </div>
     </div>
     <div class="carousel-item">
       <img src="/media/photos/2.jpg">
+	  <div class="carousel-caption">
+        <h3>牢记使命</h3>
+      </div>
     </div>
     <div class="carousel-item">
       <img src="/media/photos/3.jpg">
+	  <div class="carousel-caption">
+        <h3>永远奋斗</h3>
+      </div>
     </div>
   </div>
  
