--- a/polls/templates/validate.html
+++ b/polls/templates/validate.html
@@ -58,24 +58,73 @@ $(document).ready(function(){
 <body>
 
 <div class="container">
+	<div class="row-fluid">
+		<div class="col-xs-7">
+			<form action="http://wwww.baidu.com" class="">
+				<div class="form-group has-feedback">
+					<label for="username">用户名</label>
+					<div class="input-group">
+						<span class="input-group-addon"><span class="glyphicon glyphicon-user"></span></span>
+						<input id="username" class="form-control" placeholder="请输入用户名" maxlength="20" type="text">
+					</div>
+					<span style="color:red;display: none;" class="tips"></span>
+					<span style="display: none;" class=" glyphicon glyphicon-remove form-control-feedback"></span>
+					<span style="display: none;" class="glyphicon glyphicon-ok form-control-feedback"></span>
+				</div>
+				
+				<div class="form-group has-feedback">
+					<label for="password">密码</label>
+					<div class="input-group">
+						<span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></span>
+						<input id="password" class="form-control" placeholder="请输入密码" maxlength="20" type="password">
+					</div>
 
-	<div class="col-xs-7">
-		<div class="form-group has-feedback">
-			<label for="idcode-btn">验证码</label>
-			<div class="input-group">
-				<span class="input-group-addon"><span class="glyphicon glyphicon-qrcode"></span></span>
-				<input id="idcode-btn" class="form-control" placeholder="请输入验证码" maxlength="4" type="text">
-			</div>
-			<span style="color:red;display: none;" class="tips"></span>
-			<span style="display: none;" class="glyphicon glyphicon-remove form-control-feedback"></span>
-			<span style="display: none;" class="glyphicon glyphicon-ok form-control-feedback"></span>
-		</div>
-	</div>
-	<div class="col-xs-5" style="padding-top: 30px">
-		<div id="test"></div>	
-	</div>
+					<span style="color:red;display: none;" class="tips"></span>
+					<span style="display: none;" class="glyphicon glyphicon-remove form-control-feedback"></span>
+					<span style="display: none;" class="glyphicon glyphicon-ok form-control-feedback"></span>
+				</div>
+
+				<div class="form-group has-feedback">
+					<label for="passwordConfirm">确认密码</label>
+					<div class="input-group">
+						<span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></span>
+						<input id="passwordConfirm" class="form-control" placeholder="请再次输入密码" maxlength="20" type="password">
+					</div>
+					<span style="color:red;display: none;" class="tips"></span>
+					<span style="display: none;" class="glyphicon glyphicon-remove form-control-feedback"></span>
+					<span style="display: none;" class="glyphicon glyphicon-ok form-control-feedback"></span>
+				</div>
+			
+				
+				<div class="row" style="padding-bottom: 30px ">
+					<div class="col-xs-7">
+						<label for="idcode-btn">验证码</label>
+						<div class="input-group">
+							<span class="input-group-addon"><span class="glyphicon glyphicon-qrcode"></span></span>
+							<input id="idcode-btn" class="form-control" placeholder="请输入验证码" maxlength="4" type="text">
+						</div>
+						<span style="color:red;display: none;" class="tips"></span>
+						<span style="display: none;" class="glyphicon glyphicon-remove form-control-feedback"></span>
+						<span style="display: none;" class="glyphicon glyphicon-ok form-control-feedback"></span>
+					</div>
+					<div class="col-xs-5" style="padding-top: 30px ">
+						<div id="test"></div>	
+					</div>
+				</div>
+				
+				<div class="form-group">
+					<input class="form-control btn btn-primary" id="submit" value="立&nbsp;&nbsp;即&nbsp;&nbsp;注&nbsp;&nbsp;册" type="submit">
+				</div>
+
+				<div class="form-group">
+					<input value="重置" id="reset" class="form-control btn btn-danger" type="reset">
+				</div>
+				
+			</form>
+		</div>	
+	</div>	
 </div>
-	
+
 <br/>
 
 
@@ -130,25 +179,50 @@ $(document).ready(function(){
 		inputcode = $("#idcode-btn").val()
 		if(inputcode==gencode)
 		{
-			alert("succ: right code")
+			//alert("succ: right code")
 			verifresult = true
 		}
 		else
 		{
-			alert("FAIL: wrong code")
+			//alert("FAIL: wrong code")
 			verifresult = false
 		}
 		
 		return verifresult
 	}
 	
+	//校验成功函数
+	function verifysuccess(Obj, counter) {
+		Obj.parent().parent().removeClass('has-error').addClass('has-success');
+		$('#ehong-code-tip-ck').hide();
+		$('.glyphicon-ok').eq(counter).show();
+		$('.glyphicon-remove').eq(counter).hide();
+		$('.tips').eq(counter).hide();
+	}
 
+	// 校验失败函数
+	function verifyfail(Obj, counter, msg) {
+		Obj.parent().parent().removeClass('has-success').addClass('has-error');
+		$('.glyphicon-remove').eq(counter).show();
+		$('.glyphicon-ok').eq(counter).hide();
+		$('.tips').eq(counter).text(msg).show();
+	}
 </script>
 
 <script>
 VerificationId();
 
-$("#idcode-btn").change(Verificate)
+$("#idcode-btn").change(function(){
+	rst = Verificate()
+	if(rst)
+	{
+		verifysuccess($(this), 0);
+	}
+	else
+	{
+		verifyfail($(this), 0, '验证码输入错误');
+	}
+})
 
 </script>
 	
