--- a/polls/templates/didi.html
+++ b/polls/templates/didi.html
@@ -4,6 +4,7 @@
 <head>
 <meta charset="utf-8"> 
 <script src="/static/js/jquery-3.3.1.js"></script>
+<script src="/static/js/jquerysession.js"></script>
 <link href="/static/bootstrap-4.0.0-dist/css/bootstrap.min.css" rel="stylesheet">
 <script src="/static/bootstrap-4.0.0-dist/js/bootstrap.min.js"></script>
 <script src="https://cdn.bootcss.com/popper.js/1.12.5/umd/popper.min.js"></script>
@@ -18,7 +19,13 @@
 <script>
 $(document).ready(function(){
 
-	
+	{% if request.session.username %}  
+		//alert("{{ request.session.username }} ")
+	{% else %}  
+		alert("请登陆")
+		$(location).attr('href', '/login')
+	{% endif %}  
+
 	function getCookie(name) {  
 		var cookieValue = null;  
 		if (document.cookie && document.cookie != '') {  
@@ -57,8 +64,7 @@ $(document).ready(function(){
     /*update driver's comment*/
 	function updatecomment(cmid)
 	{
-		
-		url = "/polls/comment/"+cmid
+		xxxx = $.session.get('username')
 		//alert(url)
 		var jsondata = JSON.stringify({"cmid":cmid})
 		$.ajax({
@@ -71,7 +77,7 @@ $(document).ready(function(){
 			success: function(data,textStatus){
 						//alert(data);
 						//alert("success");
-						$(location).prop('href', "/polls/didi")
+						$(location).prop('href', "/didi")
 					},
 					error: function(xhr,status,errMsg){
 						//alert(data)
@@ -85,6 +91,12 @@ $(document).ready(function(){
 </head>
 
 <body>
+{% if request.session.username %}  
+    <h4 style='font-family:楷体;'>{{ welcome}} {{ request.session.username }} </h4>  
+{% else %}  
+    <h3 style='font-family:楷体;'>请重新登陆</h3>  
+{% endif %}  
+ 
 <div class="container">
 <div class="row">
 <div class="col-sm-12">
@@ -145,7 +157,7 @@ $(document).ready(function(){
 	{% for driver in Drivers %}
   	<tr>
     	<td style="width:auto;height:auto;">
-    	<img src="/media/{{driver.img}}" class="rounded-circle img-fluid responsive"  style="width:50px;height:50px;"> <a href="/polls/driver/{{driver.id}}">{{driver.driver_name}}</a>
+    	<img src="/media/{{driver.img}}" class="rounded-circle img-fluid responsive"  style="width:50px;height:50px;"> <a href="/driver/{{driver.id}}">{{driver.driver_name}}</a>
     	</td>
 		
     	<td >
@@ -177,7 +189,7 @@ $(document).ready(function(){
 	{% for driver in Drivers %}
   	<tr>
     	<td style="width:auto;height:auto;">
-    	<img src="/media/{{driver.img}}" class="rounded-circle img-fluid responsive"  style="width:50px;height:50px;"> <a href="/polls/driver/{{driver.id}}">{{driver.driver_name}}</a>
+    	<img src="/media/{{driver.img}}" class="rounded-circle img-fluid responsive"  style="width:50px;height:50px;"> <a href="/driver/{{driver.id}}">{{driver.driver_name}}</a>
     	</td>
 		
     	<td >
