--- a/polls/templates/didi.html
+++ b/polls/templates/didi.html
@@ -65,6 +65,7 @@ $(document).ready(function(){
 	function updatecomment(cmid)
 	{
 		xxxx = $.session.get('username')
+		url = "/comment/"+cmid
 		//alert(url)
 		var jsondata = JSON.stringify({"cmid":cmid})
 		$.ajax({
@@ -91,14 +92,11 @@ $(document).ready(function(){
 </head>
 
 <body>
-{% if request.session.username %}  
-    <h4 style='font-family:楷体;'>{{ welcome}} {{ request.session.username }} </h4>  
-{% else %}  
-    <h3 style='font-family:楷体;'>请重新登陆</h3>  
-{% endif %}  
+
+  
  
 <div class="container">
-<div class="row">
+<div class="row" >
 <div class="col-sm-12">
 <div id="demo" class="carousel slide" data-ride="carousel" >
  
