--- a/polls/templates/publish.html
+++ b/polls/templates/publish.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
@@ -24,9 +25,74 @@
 
 
 <script>
+function opimage(files)
+{
+	alert("insert image1111111111")
+	alert(files[0])
+	
+	var form_data = new FormData();
+	var file_info =files[0];
+	form_data.append('picture',file_info);
+	//if(file_info==undefined)暂且不许要判断是否有附件
+		//alert('你没有选择任何文件');
+		//return false
+	$.ajax({
+		url:'/uploadpic',
+		type:'POST',
+		data: form_data,
+		processData: false,  // tell jquery not to process the data
+		contentType: false, // tell jquery not to set contentType
+		dataType:'text',
+		success: function(pic) {
+
+			alert("succ")
+			$('.summernote').summernote('insertImage',pic);
+		},
+		error: function(xhr,status,errMsg){
+						//alert(data)
+						alert("fail");
+						alert(status)
+						alert(errMsg)
+					}
+	});
+			
+}
+
 $(document).ready(function() {
-  $('.summernote').summernote({height:330});
+	function getCookie(name) {  
+		var cookieValue = null;  
+		if (document.cookie && document.cookie != '') {  
+			var cookies = document.cookie.split(';');  
+			for (var i = 0; i < cookies.length; i++) {  
+				var cookie = jQuery.trim(cookies[i]);  
+				// Does this cookie string begin with the name we want?  
+				if (cookie.substring(0, name.length + 1) == (name + '=')) {  
+					cookieValue = decodeURIComponent(cookie.substring(name.length + 1));  
+					break;  
+				}  
+			}  
+		}  
+		return cookieValue;  
+	}  
+	function csrfSafeMethod(method) {  
+		// these HTTP methods do not require CSRF protection  
+		return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));  
+	}  
+	$.ajaxSetup({  
+		beforeSend: function(xhr, settings) {  
+		var csrftoken = getCookie('csrftoken');       
+		if (!csrfSafeMethod(settings.type) && !this.crossDomain) {  
+				xhr.setRequestHeader("X-CSRFToken", csrftoken);  
+			}  
+		}  
+	}); 
+	
+  $('.summernote').summernote({height:330,table:'table',callbacks: {
+    onImageUpload: opimage
+  }});
+  
 });
+
 </script>
 
 <style>
