--- a/polls/templates/blog.html
+++ b/polls/templates/blog.html
@@ -25,7 +25,7 @@
 
 <script>
 $(document).ready(function() {
-  $('.summernote').summernote();
+  $('#testblog').html('<p>eg3egg34g34gewf43ctvtvaffs</p><p><img src="/static/pic/123.jpg" style="width: 500px"></p><p>111111111111111111er3r32324t34t34ef</p>');
 });
 </script>
 
@@ -131,6 +131,16 @@ $(document).ready(function() {
 				</div>
 				<button type="button" class="btn btn-info btn-sm">阅读全文</button>
 			</div>
+			
+			<div class="alert alert-secondary">
+				<h3 class="text-center">数据库获取文章</h3>
+				<h6 class="text-center"><small>作者：<span class="text-info">王赛</span> • 2018年1月22日</small></h6>
+				<div  class="alert alert-secondary" style="border:0px" id="testblog">
+					
+				</div>
+				<button type="button" class="btn btn-info btn-sm" id="testbtn">阅读全文</button>
+			</div>
+			
 			
 			<!-- <div class="alert alert-secondary"> -->
 				<!-- <div class="summernote" rows="15"></div> -->
