--- a/polls/templates/didi.html
+++ b/polls/templates/didi.html
@@ -110,19 +110,19 @@ $(document).ready(function(){
   <!-- 轮播图片 -->
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="/media/photos/1.jpg" >
+      <img src="/media/photos/7.bmp" >
 	  <div class="carousel-caption">
         <h3>不忘初心</h3>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="/media/photos/2.jpg" >
+      <img src="/media/photos/8.jpg" >
 	  <div class="carousel-caption">
         <h3>牢记使命</h3>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="/media/photos/3.jpg" >
+      <img src="/media/photos/9.jpg" >
 	  <div class="carousel-caption">
         <h3>永远奋斗</h3>
       </div>
