--- a/polls/templates/publish.html
+++ b/polls/templates/publish.html
@@ -8,18 +8,28 @@
 <script src="/static/js/jquerysession.js"></script>
 <link href="/static/bootstrap-4.0.0-dist/css/bootstrap.min.css" rel="stylesheet">
 <script src="/static/bootstrap-4.0.0-dist/js/bootstrap.min.js"></script>
-<script src="https://cdn.bootcss.com/popper.js/1.12.5/umd/popper.min.js"></script>
 
-<link rel="stylesheet" href="https://cdn.bootcss.com/highlight.js/8.5/styles/monokai_sublime.min.css">
-<link href="https://cdn.bootcss.com/magnific-popup.js/1.0.0/magnific-popup.min.css" rel="stylesheet">
+
+<!-- <script src="https://cdn.bootcss.com/popper.js/1.12.5/umd/popper.min.js"></script> -->
+<!-- <link rel="stylesheet" href="https://cdn.bootcss.com/highlight.js/8.5/styles/monokai_sublime.min.css"> -->
+<!-- <link href="https://cdn.bootcss.com/magnific-popup.js/1.0.0/magnific-popup.min.css" rel="stylesheet"> -->
+
+<script src="/static/thirdparty/popper.min.js"></script>
+<link rel="stylesheet" href="/static/thirdparty/monokai_sublime.min.css">
+<link href="/static/thirdparty/magnific-popup.min.css" rel="stylesheet">
+
 	
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
 
 <!-- <link href="http://netdna.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.css" rel="stylesheet"> -->
-<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script> 
-<script src="http://netdna.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.js"></script> 
+
+<!-- <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>  -->
+<!-- <script src="http://netdna.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.js"></script>  -->
+
+<script src="/static/thirdparty/3.1/jquery.js"></script> 
+<script src="/static/thirdparty/3.1/bootstrap.js"></script> 
 
 <link href="/static/summernote-master/dist/summernote-bs4.css" rel="stylesheet">
 <script src="/static/summernote-master/dist/summernote-bs4.js"></script>
