--- a/polls/templates/publish.html
+++ b/polls/templates/publish.html
@@ -197,13 +197,13 @@ $(document).ready(function() {
 	
 	<ul class="nav  nav-tabs justify-content-left">
 		<li class="nav-item">
-			<a class="nav-link active" href="#">首页</a>
+			<a class="nav-link active" href="/blog/?pg=1&searchval=">首页</a>
 		</li>
 		<li class="nav-item">
 			<a class="nav-link" href="/didi">论坛</a>
 		</li>
 		<li class="nav-item">
-			<a class="nav-link" href="#">帮助</a>
+			<a class="nav-link" href="/publish">发布</a>
 		</li>
 		<li class="nav-item">
 			<a class="nav-link" href="#">下载</a>
