--- a/polls/templates/showblog.html
+++ b/polls/templates/showblog.html
@@ -57,23 +57,13 @@ $(document).ready(function() {
 				}  
 			}  
 		}); 
-  $('#testblog').html('<p>eg3egg34g34gewf43ctvtvaffs</p><p><img src="/static/pic/123.jpg" style="width: 500px"></p><p>111111111111111111er3r32324t34t34ef</p>');
+
   
   $('#searchblog').click(function(){
 	//alert('search click')
 	window.location.href='/blog/?pg=1&searchval='+$('#searchblogcondition').val(); 
   })
 });
-
-function gotopagehref(){
-		window.location.href='/blog/?pg='+$('#gotopagetext').val()+'&searchval='+$('#searchblogcondition').val(); 
-	}
-	
-total_pg={{total_pg}} //总页数
-cur_page={{cur_page}} //当前页
-av_page={{av_page}}//每页个数
-var pre_pg
-var next_pg
 
 
 function HTMLEncode(html) {
@@ -92,15 +82,7 @@ function HTMLDecode(text) {
     return output; 
 } 
 
-function showablog(blogid,blogtitle)
-{
-	alert(blogid)
-	alert(blogtitle)
-	window.location.href='/showblog/?blogid='+blogid; 
-}
-
-
-	  
+  
 </script>
 
 </head>
@@ -190,11 +172,11 @@ function showablog(blogid,blogtitle)
 			
 			</div>
 			
-			{% for blog in Blogs %}
+			
 			<div class="alert alert-secondary">
 				<h3 class="text-center">{{blog.blogtitle}}</h3>
 				<h6 class="text-center"><small>作者：<span class="text-info">大智若愚</span> • {{blog.blogdate|date:"Y-m-d H:i:s"}}</small></h6>
-				<div  class="alert alert-secondary" style="border:0px;height:180px;overflow:hidden" id="testblog111" >
+				<div  class="alert alert-secondary" style="border:0px;" id="testblog111" >
 						<p class="{{blog.id}}" ></p>
 						<script>
 							$(function(){
@@ -205,9 +187,9 @@ function showablog(blogid,blogtitle)
 							//alert('{{blog.blogdate|date:"Y-m-d H:i:s"}}')
 						</script>
 				</div>
-				<button type="button" class="btn btn-info btn-sm" id="btnshowall" onclick="showablog('{{blog.id}}','{{blog.blogtitle}}')">阅读全文</button>
+				<!-- <button type="button" class="btn btn-info btn-sm" id="btnshowall" onclick="showablog('{{blog.id}}','{{blog.blogtitle}}')">阅读全文</button> -->
 			</div>
-			{% endfor %}
+			
 			
 			
 		</div>
@@ -256,89 +238,6 @@ function showablog(blogid,blogtitle)
 			
 		</div>
 	</div>
-	
-	
-	
-	<ul class="pagination pagination-sm" id="blogpage">
-	  <li class="page-item"><a class="page-link" href="/blog/" id="prepage")>Previous</a></li>
-	  
-	  
-	  <script>
-			{% if request.session.searchcondition %}  
-				$('#searchblogcondition').val("{{ request.session.searchcondition }}")
-				//alert("{{ request.session.searchcondition }}")
-			{% else %}  
-				//alert("没有request.session.searchcondition")
-			{% endif %} 
-	
-		  //for(var i=1;i<=total_pg;i++)
-		  //alert(Math.floor(1/6))
-		  per_pg =6 //每组显示6页
-		   
-		  for(var m=0;;m++)
-		  {
-			if(cur_page>=(m*6+1)&&cur_page<=(m+1)*6)
-			{
-				break;
-			}
-		  }
-		  start_pg = m*6+1
-		  end_pg = (m+1)*6
-		  if(end_pg>total_pg)
-		  {
-			end_pg=total_pg
-		  }
-		  for(var i=start_pg;i<=end_pg;i++)
-		  {
-			
-			var new_li = document.createElement("li")
-			new_li.className = "page-item"
-			if(i==cur_page)
-			{
-				new_li.className +=  " active"
-			}
-			
-			var new_a = document.createElement("a")
-			new_a.className = "page-link"
-			new_a.text = i
-			new_a.href="/blog/?pg="+i+'&searchval='+$('#searchblogcondition').val(); 
-			//alert(new_a.href)
-			new_li.appendChild(new_a)
-			document.getElementById('blogpage').appendChild(new_li)
-			//new_e.onclick = function(){VerificationId()}
-		  }
-		  
-		  if(cur_page>1)
-		  {
-			pre_pg = cur_page-1
-		  }
-		  else
-		  {
-			pre_pg=1
-		  }
-		  if(cur_page<total_pg)
-		  {
-			next_pg = cur_page+1
-		  }
-		  else
-		  {
-			next_pg = cur_page
-		  }
-		  
-		  document.getElementById('prepage').href = "/blog/?pg="+String(pre_pg)+'&searchval='+$('#searchblogcondition').val(); 
-		  
-	  </script>
-	  
-	  <li class="page-item"><a class="page-link" href="#" id="nextpage">Next</a></li>
-	  <script>
-		document.getElementById('nextpage').href = "/blog/?pg="+String(next_pg)+'&searchval='+$('#searchblogcondition').val(); 
-	  </script>
-	  
-	  <li class="page-item">跳至<input type="text" style="width:35px;" id="gotopagetext" name="gotopage">页</input><a class="page-link" style="display:inline"  href="javascript:void(0);" onclick="gotopagehref()">GO</a></li>
-	  
-	  
-	</ul>
-	
 	
 	
 
